Fix format issues on mobile with images
The profile picture would not scale properly on mobile sized screens. This adds a profile pic id with the proper attriubutes for the image to scale.

--- a/css/main.css
+++ b/css/main.css
@@ -183,7 +183,7 @@ a:after {
 	color: white;
 }
 
-/* Intnro Wrap */
+/* Intro Wrap */
 
 #intro {
 	background: #2c3e50;
@@ -203,6 +203,10 @@ a:after {
 	vertical-align: middle;
 }
 
+#profilepic {
+	height: auto;
+    max-width: 100%;
+}
 
 #skillswrap {
 	background: #2c3e50;
